--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,22 @@
 plugins {
     id 'java'
+    id 'jacoco'
     id 'org.springframework.boot' version '3.5.7'
     id 'io.spring.dependency-management' version '1.1.7'
     id 'nebula.lint'version '21.1.3'
     id 'io.freefair.lombok' version "9.0.0"
-
-
 }
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
+}
+
+
+
+jacoco {
+    toolVersion = "0.8.11" // Specify the desired JaCoCo version
+}
+
 
 allprojects {
     apply plugin: "nebula.lint"
@@ -27,12 +37,41 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:3.4.3'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.14'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'com.netflix.nebula:gradle-lint-plugin:latest.release'
+    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
     testImplementation platform('org.junit:junit-bom:5.10.0')
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
 test {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport // Ensure JaCoCo report is generated after tests
+
 }
 
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.required = true // Enable XML report for potential integration with other tools
+        html.required = true // Enable HTML report for easy viewing
+    }
+}
+
+jacocoTestCoverageVerification {
+    violationRules {
+        rule {
+            element = 'CLASS' // Apply rule to classes
+            limit {
+                counter = 'LINE' // Check line coverage
+                value = 'COVEREDRATIO' // Use covered ratio
+                minimum = 0.30 // Require 80% line coverage
+            }
+        }
+    }
+}
