--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 springdoc.swagger-ui.path=/api-docs
+spring.data.mongodb.uri=mongodb://localhost:27017/tech_news
+algolia.service.url=https://hn.algolia.com/api/v1/
+algolia.service.uri=/search_by_date?query=java
+jwt.secret-key=YourSecureRandomSecretKeyHere
+
