--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,6 +35,9 @@ jobs:
 
     - name: Build with Gradle Wrapper
       run: ./gradlew build
+    #run tests  
+    - name: Build and run tests
+      run: ./gradlew clean test --info
 
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
@@ -61,7 +64,4 @@ jobs:
         java-version: '25'
         distribution: 'temurin'
 
-    # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
-    # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
-    - name: Generate and submit dependency graph
-      uses: gradle/actions/dependency-submission@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+   
