--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -63,5 +63,6 @@ jobs:
       with:
         java-version: '25'
         distribution: 'temurin'
-
+    - name: Generate and submit dependency graph
+      uses: gradle/actions/dependency-submission@v4
    
